--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "university-of-helsinki": "file:"
   },
   "devDependencies": {
